# Terraforming

./: .gitignore  LICENSE  PLANET_SNAPSHOT_SCHEMA.md  PUSH_AFTER_EDIT.md  README.md  SIGNATURE.md  check_deployment.sh  push_to_github.sh  pyproject.toml  requirements.txt  run_pipeline_demo.py  setup_git_and_push.sh
terraforming_engine/: __init__.py  __main__.py  config.py  pipeline.py  plan.py  report.py  schema.py
terraforming_engine/cherubim_engine/: __init__.py
terraforming_engine/extensions/: __init__.py  history_reconstruction_adapter.py
terraforming_engine/joe_engine/: __init__.py  _core.py  explore.py
terraforming_engine/moe_engine/: __init__.py  _core.py  explore.py
